# stop_n_go

./: .gitignore  .gitmodules  .ignore  README.md  design.md  pose_goal.md  report.md  rviz_trajectory.md
data/: conflict_only_trials_22.json
pkg/src/sim/trapezoid_ur_description/: CMakeLists.txt  package.xml
pkg/src/sim/trapezoid_ur_description/launch/: view_trapezoid_ur7e.launch.py
pkg/src/sim/trapezoid_ur_description/rviz/: trapezoid_ur7e_scene.rviz
pkg/src/sim/trapezoid_ur_description/urdf/: trapezoid_ur7e_scene.urdf.xacro
pkg/src/sim/trapezoid_ur_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
pkg/src/sim/trapezoid_ur_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  trapezoid_ur7e_scene.ros2_control.xacro  trapezoid_ur7e_scene.srdf  trapezoid_ur7e_scene.urdf.xacro
pkg/src/sim/trapezoid_ur_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
pkg/src/sim/trapezoid_ur_sim/: CMakeLists.txt  package.xml
pkg/src/sim/trapezoid_ur_sim/config/: stop_n_go_moveit.rviz
pkg/src/sim/trapezoid_ur_sim/launch/: gazebo_moveit.launch.py
pkg/src/stop_n_go/: CMakeLists.txt  package.xml
pkg/src/stop_n_go/include/stop_n_go/app/: conflict_scenario_dataset.hpp  scenario_search.hpp
pkg/src/stop_n_go/include/stop_n_go/base/: conversion.hpp  initial_planner.hpp  r_state.hpp  robot_registry.hpp  trajectory.hpp  utils.hpp
pkg/src/stop_n_go/include/stop_n_go/core/: conflict_check.hpp  conflict_resolver.hpp  conflict_result.hpp  log_level.hpp  search_node.hpp  stop_n_go_search.hpp
pkg/src/stop_n_go/launch/: arm1_direct_movegroup_pose_demo.launch.py  arm1_initial_planner_demo.launch.py  find_multi_arm_overlap_goals_demo.launch.py  four_arm_random_goal_demo.launch.py  plan_resample_execute_demo.launch.py  stop_n_go_conflict_dataset_demo.launch.py  stop_n_go_sim_demo.launch.py
pkg/src/stop_n_go/src/app/: conflict_scenario_dataset.cpp  scenario_search.cpp
pkg/src/stop_n_go/src/base/: conversion.cpp  initial_planner.cpp  r_state.cpp  robot_registry.cpp  trajectory.cpp
pkg/src/stop_n_go/src/core/: conflict_check.cpp  conflict_resolver.cpp  conflict_result.cpp  search_node.cpp  stop_n_go_search.cpp
pkg/src/stop_n_go/src/demo/: arm1_direct_movegroup_pose_demo.cpp  arm1_initial_planner_demo.cpp  conflict_checker_demo.cpp  find_multi_arm_overlap_goals_demo.cpp  four_arm_random_goal_demo.cpp  plan_resample_execute_demo.cpp  stop_n_go_conflict_dataset_demo.cpp  stop_n_go_sim_demo.cpp
pkg/src/stop_n_go/test/: test_r_state.cpp
