<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stop_n_go</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fainic652@outlook.com">fainic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>moveit_ros_planning</test_depend>
  <test_depend>trapezoid_ur_description</test_depend>
  <test_depend>trapezoid_ur_moveit_config</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
